# branndon.dev

./: .gitignore  CLAUDE.md  jobs_database.db  pyproject.toml
.claude/: settings.local.json
.claude/agents/: resume-audit-validator.md
.claude/commands/: application-rejected.md  first-interview.md  generate-resume.md  ignore-company.md  next-job.md  setup-job.md
.claude/commands/job/: next.md  research.md  skip.md
.claude/notes/: resume-chameleon.md
data/: company_ignore_list.json  job_tracking.json.backup  job_tracking.yaml
docs/: ATS_BEST_PRACTICES.md  ATS_RESUME_LIMITS.md  ENGINEER_PROFILE.md  EXAMPLE_CUSTOMIZATION_ANALYSIS.md  FUN_FACTS_ACHIEVEMENTS.md  JOB_APPLICATION_CUSTOMIZATION.md  JOB_SEARCH_CRITERIA.md  LLM_RESUME_RULES.md  LOCAL_SETUP.md  NO-FABRICATION-RULES.md  PART_TIME_JOB_RESEARCH.md  RECOMMENDATIONS.md  RESUME_CUSTOMIZATION_WORKFLOW.md  RESUME_GENERATION_COMPLETE.md  RESUME_PROJECT.md  RESUME_WRITING_STYLE.md  WORK_HISTORY_DETAILED.md  YAML_MIGRATION_PROCESS.md  resume-ats-template.json
docs/templates/: application-tracking-template.md  cover-letter-template.txt  customization-analysis-template.md  interview-prep-template.md  job-tracking-template.yaml  job_review.html
job-search/example-ACME-Corp-Senior-Django-Developer/: application-tracking.md  cover-letter.md  customization-analysis.md  interview-prep.md  job-posting.md  job-tracking.yaml  resume-branndon-coelho-acme.json
scrapers/: README.md
scrapers/JobsCrawler/: .env.example  .gitignore  README.md  config.py  logs.sh  main.sh  pyproject.toml  setup.py
scrapers/JobsCrawler/debug_html/: 4dayweek.io_page1.html
scrapers/JobsCrawler/scripts/: check_job_location.py  get_next_job.py  skip_jobs.py  update_job_status.py
scrapers/JobsCrawler/src/: constants.py  crawler.py  logs_in_discord.py  main.py  models.py
scrapers/JobsCrawler/src/crawlers/: async_api.py  async_bs4.py  async_rss.py  async_sel.py
scrapers/JobsCrawler/src/db/: __init__.py  sqlite_wrapper.py
scrapers/JobsCrawler/src/embeddings/: e5_base_v2_utils.py  embed_latest_crawled_data.py
scrapers/JobsCrawler/src/notebooks/: prelimiary_analysis.ipynb
scrapers/JobsCrawler/src/resources/api_resources/: api_main.json  api_test.json  json_reader.py
scrapers/JobsCrawler/src/resources/bs4_resources/: AsyncFollowTwoLinks.py  archive_bs4.json  bs4_main.json  bs4_test.json  lil_scrapper.py
scrapers/JobsCrawler/src/resources/data/: WorldLocations.json
scrapers/JobsCrawler/src/resources/other_resources/: indeed_test.json
scrapers/JobsCrawler/src/resources/proxies/: GetProxies.py  proxies_list.txt
scrapers/JobsCrawler/src/resources/rss_resources/: SmallFeedparser.py  rss_archive.json  rss_main.json  rss_test.json
scrapers/JobsCrawler/src/resources/selenium_resources/: selenium_main.json  selenium_test.json
scrapers/JobsCrawler/src/tasks/: sites2crawl.json  sites2update.json
scrapers/JobsCrawler/src/utils/: FollowLink.py  handy.py  logger_helper.py  scrape_job_page.py  scripts.py
scrapers/JobsCrawler/tests/: test_all_async.py  test_async_api.py  test_async_bs4.py  test_async_embedding.py  test_async_rss.py  test_embeddings.py
scripts/: cleanup_legacy_files.py  create_pdf.py  create_yaml_from_jobs.py  find_top_jobs.py  generate_resume_pdf.py  import_job.py  job_db.py  job_tracker.py  job_tracker_db.py  job_tracker_operations.py  job_tracker_stats.py  job_tracker_storage.py  playwright_scraper.py  process_job.py  pyproject.toml  research_company.py  server.sh  setup_job_directory.py  text_to_pdf.py  update_yaml_from_files.py
webroot/: branndon-coelho-resume-ats.json  branndon-coelho-resume.json  consulting.html  index.html
webroot/assets/css/: base.css  consulting.css  custom.css  main.css  pillar-1.css  print.css
webroot/blog/content/: building-a-blog-with-cloudflare-wrangler-and-git-hub.md
