[tool.poetry]
name = "jobscrawler"
version = "0.1.0"
description = ""
authors = [
    "JCRG <juancarlosrg1999@gmail.com>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10.6"
aiohttp = ">=3.11.16,<4.0.0"
# SQLite is built-in, no need for psycopg2-binary
# psycopg2-binary = "2.9.5"
pandas = ">=2.2.3,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
bs4 = ">=0.0.2,<0.0.3"
feedparser = ">=6.0.11,<7.0.0"
tenacity = ">=9.1.2,<10.0.0"
lxml = "^5.4.0"

# EMBEDDING DEPENDENCIES (DISABLED) - DO NOT DELETE, may be re-enabled later
# These dependencies are ~5GB and only needed for ML embeddings/RAG functionality
# torch = ">=2.6.0,<3.0.0"
# pgvector = ">=0.4.0,<0.5.0"
# tiktoken = ">=0.9.0,<0.10.0"
# transformers = ">=4.51.0,<5.0.0"
# accelerate = "^1.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "_pypackages_",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".pytest_cache",
]

# Same as Black.
line-length = 120

# Assume Python 3.12.
target-version = "py312"

# Format Jupyter notebooks
extend-include = ["*.ipynb"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the docstring-code-format setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
# Enable pycodestyle (E) and Pyflakes (F) codes by default.
extend-select = ["D", "E", "F", "I", "UP"]

extend-ignore = [
    "D100",
    "D104",
    "D107",
    "D203",
    "D212",
    "D213",
    "D401",
    "D402",
    "D413",
    "D415",
    "D416",
    "D417",
    "E71",
    "E226",
    "E302",
    "E731",
]

# Allow autofix for all enabled rules (when --fix) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-line-length = 120
ignore-overlong-task-comments = true

[tool.isort]
known_first_party = 'docformatter'
known_third_party = ['toml']
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| \.pytest_cache
)/
'''